node-sass install success - node 13.14.0 & npm 6.14.4 & node-sass 4.13 & win7 hp

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "normalize.css": "^8.0.1"
   },
   "devDependencies": {
-    "cowsay": "^1.5.0"
+    "cowsay": "^1.5.0",
+    "node-sass": "^4.13.1"
   }
 }
